--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,14 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   get: ^4.7.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.2.3
 flutter:
   uses-material-design: true
   assets:
